@@ -1,20 +1,0 @@
-cpuinfo cittagazze.cpuinfo
-majors 2.6
-flavour amd64-k8
-numcpus 2
-kernel-2.6 \
-  linux-image-2.6-amd64-k8-smp \
-  linux-image-2.6-amd64-k8 \
-  linux-image-2.6-amd64-generic
-usable \
-  linux-image-2.6-amd64-generic \
-  linux-image-2.6-amd64-k8 \
-  linux-image-2.6-amd64-k8-smp \
-  linux-image-2.6.8-9-amd64-generic \
-  linux-image-2.6.8-9-amd64-k8 \
-  linux-image-2.6.8-9-amd64-k8-smp
-unusable \
-  linux-image-2.6-em64t-p4 \
-  linux-image-2.6-em64t-p4-smp \
-  linux-image-2.6.8-9-em64t-p4 \
-  linux-image-2.6.8-9-em64t-p4-smp
