@@ -3,8 +3,10 @@ majors 2.6
 flavour amd64-k8
 kernel-2.6 \
   linux-image-2.6-amd64-k8 \
-  linux-image-2.6-amd64-generic
+  linux-image-2.6-amd64-generic \
+  linux-image-2.6-amd64
 usable \
+  linux-image-2.6-amd64 \
   linux-image-2.6-amd64-generic \
   linux-image-2.6-amd64-k8 \
   linux-image-2.6-amd64-k8-smp \
