@@ -1,51 +1,0 @@
-cpuinfo pentium-3.cpuinfo
-majors 2.4 2.6
-flavour 686
-env SPEAKUP /nonexistent
-numcpus 2
-kernel-2.4 \
-  kernel-image-2.4-686-smp \
-  kernel-image-2.4-686 \
-  kernel-image-2.4-586tsc \
-  kernel-image-2.4-386
-kernel-2.6 \
-  linux-image-2.6-686-smp \
-  linux-image-2.6-686 \
-  linux-image-2.6-486 \
-  kernel-image-2.6-686-smp \
-  kernel-image-2.6-686 \
-  kernel-image-2.6-386
-usable \
-  kernel-image-2.4-386 \
-  kernel-image-2.4-586tsc \
-  kernel-image-2.4-686-smp \
-  kernel-image-2.4-686 \
-  kernel-image-2.4.27-2-386 \
-  kernel-image-2.4.27-2-586tsc \
-  kernel-image-2.4.27-2-686-smp \
-  kernel-image-2.4.27-2-686 \
-  kernel-image-2.6-386 \
-  kernel-image-2.6-486 \
-  kernel-image-2.6-686-smp \
-  kernel-image-2.6-686 \
-  kernel-image-2.6.8-2-386 \
-  kernel-image-2.6.8-2-686-smp \
-  kernel-image-2.6.8-2-686 \
-  linux-image-2.6.15-1-486 \
-  linux-image-2.6.15-1-686-smp \
-  linux-image-2.6.15-1-686
-unusable \
-  kernel-image-2.4-k6 \
-  kernel-image-2.4-k7-smp \
-  kernel-image-2.4-k7 \
-  kernel-image-2.4.27-2-k6 \
-  kernel-image-2.4.27-2-k7-smp \
-  kernel-image-2.4.27-2-k7 \
-  kernel-image-2.6-k7-smp \
-  kernel-image-2.6-k7 \
-  kernel-image-2.6.8-2-k7-smp \
-  kernel-image-2.6.8-2-k7 \
-  linux-image-2.6-k7-smp \
-  linux-image-2.6-k7 \
-  linux-image-2.6.15-1-k7-smp \
-  linux-image-2.6.15-1-k7
